--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,94 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+body {
+  
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+:root {
+  --color-primary: rgb(45, 38, 141);
+  --color-on-primary: rgb(255 255 255);
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+  --color-secondary: rgb(207, 163, 124);
+  --color-primary-container: rgb(245, 245, 245);
+  --color-on-primary-container: rgb(45, 38, 141);
+  /* --color-on-primary-container: rgb(133, 65, 44); */
+  
+  --color-surface: rgb(245, 245, 245);
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+
+  --color-secondary-container: rgb(232, 231, 236);
+  --color-on-secondary-container: rgb(209, 180, 155);
+
+  --color-surface-variant: rgb(168, 108, 73); 
+  --color-on-surface-variant: rgb(70, 79, 71);
+
+  --tertiary-container: rgb(241, 233, 226);
+  --color-outline: rgb(220, 220, 220);
+  --color-shadow: rgba(194, 194, 194, 0.521);
+
+
+  --md-sys-color-primary: rgb(90 88 146);
+  --md-sys-color-surface-tint: rgb(90 88 146);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(226 223 255);
+  --md-sys-color-on-primary-container: rgb(22 19 74);
+  --md-sys-color-secondary: rgb(94 92 113);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(227 224 249);
+  --md-sys-color-on-secondary-container: rgb(26 26 44);
+  --md-sys-color-tertiary: rgb(122 83 104);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(255 216 234);
+  --md-sys-color-on-tertiary-container: rgb(47 17 35);
+  --md-sys-color-error: rgb(186 26 26);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(255 218 214);
+  --md-sys-color-on-error-container: rgb(65 0 2);
+  --md-sys-color-background: rgb(252 248 255);
+  --md-sys-color-on-background: rgb(27 27 33);
+  --md-sys-color-surface: rgb(252 248 255);
+  --md-sys-color-on-surface: rgb(27 27 33);
+  --md-sys-color-surface-variant: rgb(228 225 236);
+  --md-sys-color-on-surface-variant: rgb(71 70 79);
+  --md-sys-color-outline: rgb(120 118 128);
+  --md-sys-color-outline-variant: rgb(200 197 208);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-inverse-surface: rgb(49 48 54);
+  --md-sys-color-inverse-on-surface: rgb(243 239 247);
+  --md-sys-color-inverse-primary: rgb(195 192 255);
+  --md-sys-color-primary-fixed: rgb(226 223 255);
+  --md-sys-color-on-primary-fixed: rgb(22 19 74);
+  --md-sys-color-primary-fixed-dim: rgb(195 192 255);
+  --md-sys-color-on-primary-fixed-variant: rgb(66 64 120);
+  --md-sys-color-secondary-fixed: rgb(227 224 249);
+  --md-sys-color-on-secondary-fixed: rgb(26 26 44);
+  --md-sys-color-secondary-fixed-dim: rgb(199 196 221);
+  --md-sys-color-on-secondary-fixed-variant: rgb(70 69 89);
+  --md-sys-color-tertiary-fixed: rgb(255 216 234);
+  --md-sys-color-on-tertiary-fixed: rgb(47 17 35);
+  --md-sys-color-tertiary-fixed-dim: rgb(234 185 209);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(96 60 80);
+  --md-sys-color-surface-dim: rgb(220 217 224);
+  --md-sys-color-surface-bright: rgb(252 248 255);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(246 242 250);
+  --md-sys-color-surface-container: rgb(240 236 244);
+  --md-sys-color-surface-container-high: rgb(234 231 239);
+  --md-sys-color-surface-container-highest: rgb(229 225 233);
 }
 
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  
 }
