--- a/src/app/(home)/upload/style.module.scss
+++ b/src/app/(home)/upload/style.module.scss
@@ -24,12 +24,11 @@
             }
 
             input[type="file"]::file-selector-button {
-                @apply border-none rounded-lg;
+                @apply border-none rounded-lg transition-all;
                 border: none;
                 background: var(--color-secondary);
                 color: #fff;
                 cursor: pointer;
-                transition: background .2s ease-in-out;
             }
 
             button[type="submit"] {
@@ -46,33 +45,32 @@
     }
     
     .uploaded_records {
-        @apply rounded-xl text-xl outline outline-1  flex flex-col items-center justify-center drop-shadow-md;
+        @apply rounded-xl text-xl outline outline-1 flex flex-col items-center justify-center drop-shadow-md h-full;
         outline-color: var(--color-outline);
-        @apply flex-1;
         background-color: var(--color-primary-container);
 
 
         .table_container {
-            // @apply rounded-xl w-full p-2; 
+            @apply rounded-xl w-full  p-2; 
             
-            // color: var(--color-secondary);
+            color: var(--color-secondary);
 
-            // .table_header {
-            //     @apply grid rounded-lg justify-stretch text-center outline outline-2 mb-2 ;
-            //     color: var(--color-primary);
-            //     display: grid;
-            //     grid-template-columns: 1fr 2.5fr 2fr 1fr 1fr 1fr 1fr 1fr;
-            //     outline-color: var(--color-secondary);
-            //     background-color: var(--tertiary-container);
+            .table_header {
+                @apply grid rounded-lg justify-stretch text-center outline outline-2 mb-2 ;
+                color: var(--color-primary);
+                display: grid;
+                grid-template-columns: 1fr 2.5fr 2fr 1fr 1fr 1fr 1fr 1fr;
+                outline-color: var(--color-secondary);
+                background-color: var(--tertiary-container);
                 
-            //     div {
-            //         @apply text-xl font-semibold p-3;
-            //     }
-            // }
+                div {
+                    @apply text-xl font-semibold p-3;
+                }
+            }
     
             .table_content {
                 @apply overflow-y-scroll scroll-smooth rounded-lg;
-                height: calc(100vh - 250px) !important;
+                height: calc(100vh - 240px);
 
                 .row {
                     display: grid;
