--- a/src/app/(home)/style.module.scss
+++ b/src/app/(home)/style.module.scss
@@ -3,7 +3,7 @@
     padding: 0;
     @apply max-h-screen;
 
-    @apply flex flex-row h-screen max-h-screen;
+    @apply flex flex-row flex-grow h-screen max-h-screen;
     background-color: var(--color-primary-container);
     color: var(--color-on-primary-container);
 
@@ -13,7 +13,7 @@
     }
 
     .content_main {
-        @apply  transition-all p-4 h-screen flex-1;
+        @apply  transition-all p-4 h-full flex-1;
         // @apply outline  outline-1;
         outline-color: var(--color-outline);
         background-color: var(--color-secondary-container);
