--- a/src/app/(home)/upload/style.module.scss
+++ b/src/app/(home)/upload/style.module.scss
@@ -1,5 +1,5 @@
 .upload_container {
-    @apply flex flex-col h-full font-semibold ;
+    @apply flex flex-col h-full font-semibold w-full;
     background-color: var(--color-secondary-container);
     
     .form_title {
@@ -7,7 +7,7 @@
     }
 
     .form {
-        @apply flex flex-row items-center justify-around mb-4 h-20 text-xl font-semibold rounded-lg outline outline-2 drop-shadow-md;
+        @apply flex flex-row items-center justify-around text-xl font-semibold mb-4 rounded-lg outline outline-2 drop-shadow-md;
         outline-color: var(--color-secondary);
         background-color: var(--tertiary-container);
 
@@ -17,7 +17,6 @@
             label {
                 color: var(--color-primary);
             }
-
             select, input {
                 @apply border-none;
                 color: var(--color-secondary);
@@ -41,7 +40,7 @@
                 &:hover {
                     background-color: rgb(48, 40, 163);
                 }
-            } 
+            }
         }
     }
     
@@ -51,17 +50,8 @@
         background-color: var(--color-primary-container);
 
 
-        .desc {
-            @apply flex flex-col items-center;
-
-            a {
-                @apply underline text-base;
-                color: var(--color-secondary);
-            }
-        }
-
         .table_container {
-            @apply rounded-xl w-full p-2; 
+            @apply rounded-xl w-full  p-2; 
             
             color: var(--color-secondary);
 
@@ -80,7 +70,7 @@
     
             .table_content {
                 @apply overflow-y-scroll scroll-smooth rounded-lg;
-                height: calc(100vh - 210px);
+                height: calc(100vh - 240px);
 
                 .row {
                     display: grid;
@@ -92,6 +82,10 @@
                     &.odd {
                         background-color: var(--tertiary-container);
                         color: var(--color-primary);
+                    }
+        
+                    &.even {
+                    
                     }
                 }
             }
